feat: add makrdown && image files

--- a/next/src/global/global.scss
+++ b/next/src/global/global.scss
@@ -217,3 +217,19 @@ h2,
     color: var(--secondary-300, #69a5c6);
   }
 }
+
+.orderedList,
+.unorderedList {
+  display: grid;
+  gap: 8px;
+}
+.unorderedList {
+  li {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 4px;
+    svg {
+      margin-top: clamp(2px, calc(4vw / 7.68), 4px);
+    }
+  }
+}
