--- a/next/src/components/ui/Button/Button.module.scss
+++ b/next/src/components/ui/Button/Button.module.scss
@@ -9,18 +9,17 @@
   &::after {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
     z-index: -1;
-    margin: -1px;
     opacity: 0;
     transition: opacity 0.2s;
   }
 
   &::after {
-    background: var(--secondary-100);
+    background: var(--primary-600);
     opacity: 1;
     z-index: -2;
   }
@@ -113,6 +112,7 @@
     background: radial-gradient(circle at bottom center, rgba(26, 159, 255, 1) 5%, rgba(93, 187, 255, 0));
     background-color: var(--secondary-500);
     opacity: 1;
+    z-index: 0;
   }
 
   &::before {
@@ -169,7 +169,8 @@
     }
 
     &::before {
-      background: radial-gradient(rgba(115, 196, 255, 1), rgba(0, 98, 165, 0)), var(--secondary-500);
+      background: radial-gradient(rgba(115, 196, 255, 1) 25%, rgba(0, 98, 165, 0)), var(--secondary-500);
+      z-index: 0;
     }
   }
 
@@ -190,8 +191,8 @@
   right: 0;
   margin: 1px -1px -1px -1px;
   z-index: 10;
-  border: 2px solid var(--primary-700, #262c33);
-  filter: blur(5px);
+  border: 1px solid var(--primary-700, #262c33);
+  filter: blur(3px);
 }
 
 .bullets {
