--- a/next/src/components/global/Numbers/Numbers.module.scss
+++ b/next/src/components/global/Numbers/Numbers.module.scss
@@ -2,6 +2,7 @@
   padding: clamp(80px, calc(160vw / 7.68), 200px) 0 clamp(48px, calc(64vw / 7.68), 80px);
   border-bottom: var(--sectionBorder);
   text-align: center;
+  margin-bottom: clamp(64px, calc(64vw / 7.68), 80px);
 
   h2 {
     margin: 0 auto clamp(48px, calc(64vw / 7.68), 80px) auto;
