--- a/next/src/global/global.scss
+++ b/next/src/global/global.scss
@@ -16,6 +16,12 @@
   --accent-100: #9ea9b0;
   --accent-200: #3c454f;
 
+  --error-100: #ff8d83;
+  --error-900: #1e100f;
+
+  --success-100: #91f6ae;
+  --success-900: #0f1a12;
+
   --sectionBorder: 1px solid var(--primary-700);
 
   --pageMargin: clamp(16px, calc(32vw / 7.68), 40px);
