--- a/next/src/global/global.scss
+++ b/next/src/global/global.scss
@@ -12,6 +12,7 @@
   --secondary-100: #c3d5e2;
   --secondary-300: #69a5c6;
   --secondary-500: #1e87c1;
+  --secondary-700: #1e72a0;
 
   --accent-100: #9ea9b0;
   --accent-200: #3c454f;
@@ -148,12 +149,6 @@ body {
   margin: 0 auto;
 }
 
-main {
-  // margin: clamp(32px, calc(42vw / 7.68), 42px) auto 0;
-  flex-grow: 1; // Temporary
-  width: 100%; // Temporary
-}
-
 body {
   overflow: clip;
   min-width: 320px;
@@ -204,10 +199,8 @@ h2,
   display: inline-flex;
   gap: 8px;
   align-items: flex-start;
-  padding: 10px 8px;
   align-items: center;
   cursor: pointer;
-  border: 1px solid transparent;
 
   &:hover {
     color: var(--secondary-300, #69a5c6);
@@ -218,10 +211,7 @@ h2,
   }
 
   &:focus-visible {
-    transition: none;
-    outline: none;
-    border: 1px solid var(--secondary-500, #1e87c1);
-    background: var(--primary-800, #101010);
+    color: var(--secondary-200);
   }
 
   &[target='_blank'] {
