--- a/next/src/components/global/Reviews/Reviews.module.scss
+++ b/next/src/components/global/Reviews/Reviews.module.scss
@@ -36,7 +36,7 @@
   padding: 12px clamp(32px, calc(32vw / 7.68), 42px) clamp(32px, calc(32vw / 7.68), 42px);
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   border: 1px solid var(--primary-700, #262c33);
 }
 
