--- a/next/src/components/global/Numbers/Numbers.module.scss
+++ b/next/src/components/global/Numbers/Numbers.module.scss
@@ -42,15 +42,12 @@
   align-self: center;
   color: var(--primary-300, #a7b4bc);
   font-size: clamp(calc(28rem / 16), calc(42vw / 7.68), calc(42rem / 16));
-  letter-spacing: clamp(calc(0.28rem / 16), calc(0.42vw / 7.68), calc(0.42rem / 16));
+  letter-spacing: calc(0.42rem / 16);
   text-transform: uppercase;
   font-weight: 348;
   line-height: 120%;
   width: clamp(80px, calc(110vw / 7.68), 110px);
   @media (max-width: 899px) {
     align-self: flex-start;
-  }
-
-  @media (max-width: 599px) {
   }
 }
