feat: change naming of few section && update value input login on ProvenResults

--- a/next/src/components/global/ProvenResults/ProvenResults.module.scss
+++ b/next/src/components/global/ProvenResults/ProvenResults.module.scss
@@ -46,7 +46,7 @@
   text-transform: uppercase;
   font-weight: 348;
   line-height: 120%;
-  width: clamp(80px, calc(110vw / 7.68), 110px);
+  min-width: clamp(80px, calc(110vw / 7.68), 110px);
   @media (max-width: 899px) {
     align-self: flex-start;
   }
