--- a/next/src/components/ui/Button/Button.module.scss
+++ b/next/src/components/ui/Button/Button.module.scss
@@ -73,111 +73,112 @@
     font-size: calc(16rem / 16);
     justify-content: center;
   }
-}
-.external {
-  & > span:first-child {
-    justify-content: space-between;
 
-    svg {
-      stroke: var(--secondary-100);
-      transition: stroke 0.2s;
-    }
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      transition: opacity 0.2s;
-    }
-
-    &::after {
-      opacity: 0;
-      z-index: -1;
-      background: radial-gradient(circle at bottom center, rgba(47, 129, 219, 0.2) 1%, rgba(0, 0, 0, 0.2));
-      background-color: var(--primary-900);
-    }
-
-    &::before {
-      z-index: -3;
-      background: radial-gradient(circle at bottom center, rgba(167, 180, 188, 0.1) 1%, rgba(10, 51, 79, 0));
-      background-color: var(--primary-900);
-    }
-  }
-
-  &::after {
-    background: radial-gradient(circle at bottom center, rgba(26, 159, 255, 1) 5%, rgba(93, 187, 255, 0));
-    background-color: var(--secondary-500);
-    opacity: 1;
-    z-index: 0;
-  }
-
-  &::before {
-    background: radial-gradient(rgba(115, 196, 255, 1), 25%, rgba(0, 98, 165, 0)), var(--secondary-300);
-  }
-
-  &:hover {
-    &::before {
-      opacity: 1;
-    }
+  &[data-primary='true'] {
     & > span:first-child {
-      &::after {
-        opacity: 1;
-      }
+      justify-content: space-between;
 
-      svg {
-        stroke: var(--secondary-300);
-      }
-    }
-
-    .bulletIcon {
-      &__1 {
-        opacity: 0.88;
-      }
-      &__2 {
-        opacity: 0.5;
-      }
-      &__3 {
-        opacity: 0.45;
-      }
-      &__4 {
-        opacity: 0.5;
-      }
-      &__5 {
-        opacity: 0.45;
-      }
-      &__6 {
-        opacity: 0.45;
-      }
-      &__7 {
-        opacity: 0.5;
-      }
-      &__8 {
-        opacity: 0.7;
-      }
-    }
-  }
-
-  &:focus {
-    & > span:first-child {
-      svg {
-        stroke: var(--secondary-500);
-      }
-    }
-
-    &::before {
-      background: radial-gradient(rgba(115, 196, 255, 1) 25%, rgba(0, 98, 165, 0)), var(--secondary-500);
-      z-index: 0;
-    }
-  }
-
-  &:focus-visible {
-    & > span:first-child {
       svg {
         stroke: var(--secondary-100);
+        transition: stroke 0.2s;
+      }
+
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transition: opacity 0.2s;
+      }
+
+      &::after {
+        opacity: 0;
+        z-index: -1;
+        background: radial-gradient(circle at bottom center, rgba(47, 129, 219, 0.2) 1%, rgba(0, 0, 0, 0.2));
+        background-color: var(--primary-900);
+      }
+
+      &::before {
+        z-index: -3;
+        background: radial-gradient(circle at bottom center, rgba(167, 180, 188, 0.1) 1%, rgba(10, 51, 79, 0));
+        background-color: var(--primary-900);
+      }
+    }
+
+    &::after {
+      background: radial-gradient(circle at bottom center, rgba(26, 159, 255, 1) 5%, rgba(93, 187, 255, 0));
+      background-color: var(--secondary-500);
+      opacity: 1;
+      z-index: 0;
+    }
+
+    &::before {
+      background: radial-gradient(rgba(115, 196, 255, 1), 25%, rgba(0, 98, 165, 0)), var(--secondary-300);
+    }
+
+    &:hover {
+      &::before {
+        opacity: 1;
+      }
+      & > span:first-child {
+        &::after {
+          opacity: 1;
+        }
+
+        svg {
+          stroke: var(--secondary-300);
+        }
+      }
+
+      .bulletIcon {
+        &__1 {
+          opacity: 0.88;
+        }
+        &__2 {
+          opacity: 0.5;
+        }
+        &__3 {
+          opacity: 0.45;
+        }
+        &__4 {
+          opacity: 0.5;
+        }
+        &__5 {
+          opacity: 0.45;
+        }
+        &__6 {
+          opacity: 0.45;
+        }
+        &__7 {
+          opacity: 0.5;
+        }
+        &__8 {
+          opacity: 0.7;
+        }
+      }
+    }
+
+    &:focus {
+      & > span:first-child {
+        svg {
+          stroke: var(--secondary-500);
+        }
+      }
+
+      &::before {
+        background: radial-gradient(rgba(115, 196, 255, 1) 25%, rgba(0, 98, 165, 0)), var(--secondary-500);
+        z-index: 0;
+      }
+    }
+
+    &:focus-visible {
+      & > span:first-child {
+        svg {
+          stroke: var(--secondary-100);
+        }
       }
     }
   }
