--- a/next/src/components/global/Partners/Partners.module.scss
+++ b/next/src/components/global/Partners/Partners.module.scss
@@ -60,6 +60,7 @@
         }
       }
       img {
+        width: auto;
         max-width: 80%;
         height: clamp(48px, calc(110vw / 7.68), 156px);
         transition: filter 0.2s var(--easing);
