--- a/next/src/components/global/CourseDetails/DetailsAccordion/DetailsAccordion.module.scss
+++ b/next/src/components/global/CourseDetails/DetailsAccordion/DetailsAccordion.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   row-gap: clamp(28px, calc(36vw / 7.68), 36px);
+  position: relative;
 
   details {
     padding-bottom: 16px;
