--- a/next/src/global/global.scss
+++ b/next/src/global/global.scss
@@ -159,6 +159,13 @@ body {
   background-color: var(--primary-900, #000000);
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 h1,
