--- a/next/src/components/global/FeatureList/FeatureList.module.scss
+++ b/next/src/components/global/FeatureList/FeatureList.module.scss
@@ -27,10 +27,11 @@
     & > p {
       margin-bottom: clamp(20px, calc(28vw / 7.68), 28px);
     }
-  }
 
-  .heading {
-    margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
+    h1,
+    h2 {
+      margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
+    }
   }
 
   ul {
