--- a/next/src/components/global/Footer/Footer.module.scss
+++ b/next/src/components/global/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-  // border-top: var(--sectionBorder);
+  border-top: var(--sectionBorder);
   padding: clamp(32px, calc(48vw / 7.68), 80px) 0 clamp(48px, calc(64vw / 7.68), 64px);
 }
 
