--- a/next/src/components/global/HeadingParagraph/HeadingParagraph.module.scss
+++ b/next/src/components/global/HeadingParagraph/HeadingParagraph.module.scss
@@ -11,6 +11,7 @@
     padding-bottom: clamp(112px, calc(160vw / 7.68), 200px);
   }
 
+  h1,
   h2 {
     margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
   }
