--- a/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
+++ b/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
@@ -1,9 +1,21 @@
 .section {
   padding-top: 209px;
   position: relative;
-  margin-top: -129px;
   padding-bottom: clamp(20px, calc(80vw / 7.68), 80px);
   border-bottom: var(--sectionBorder);
+
+  &[data-first='true'] {
+    margin-top: -129px;
+
+    @media (max-width: 599px) {
+      margin-top: -97px;
+    }
+  }
+  h1,
+  h2 {
+    max-width: 587px;
+    margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
+  }
 
   @media (min-width: 1600px) {
     height: clamp(784px, calc(40vw), 1056px);
@@ -15,7 +27,6 @@
 
   @media (max-width: 600px) {
     padding-top: 205px;
-    margin-top: -97px;
   }
 
   &::after {
@@ -45,44 +56,7 @@
   }
 }
 
-.heading {
-  max-width: 587px;
-  margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
-}
-
 .paragraph {
   max-width: 587px;
   margin-bottom: clamp(36px, calc(80vw / 7.68), 80px);
-}
-
-.nav {
-  margin-top: clamp(28px, calc(32vw / 7.68), 32px);
-  margin-bottom: clamp(8px, calc(12vw / 7.68), 12px);
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  column-gap: 16px;
-  row-gap: 12px;
-
-  @media (max-width: 549px) {
-    & > a,
-    & > button {
-      width: 100%;
-
-      & > span:first-child {
-        justify-content: flex-start;
-      }
-    }
-  }
-}
-
-.ctaText {
-  font-size: calc(12rem / 16);
-  letter-spacing: calc(0.12rem / 16);
-  color: var(--primary-300);
-
-  @media (max-width: 599px) {
-    font-size: calc(14rem / 16);
-    letter-spacing: calc(0.28rem / 16);
-  }
 }
