--- a/next/src/components/global/Partners/Partners.module.scss
+++ b/next/src/components/global/Partners/Partners.module.scss
@@ -6,7 +6,8 @@
     max-width: clamp(380px, calc(530vw / 7.68), 587px);
     margin-bottom: clamp(48px, calc(80vw / 7.68), 80px);
 
-    .heading {
+    h1,
+    h2 {
       margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
     }
   }
