--- a/next/src/components/global/Reviews/Reviews.module.scss
+++ b/next/src/components/global/Reviews/Reviews.module.scss
@@ -1,8 +1,9 @@
 .section {
   border-top: var(--sectionBorder);
   padding-top: clamp(32px, calc(96vw / 7.68), 128px);
-  scroll-behavior: auto;
+  margin-bottom: clamp(16px, calc(28vw / 7.68), 40px);
 
+  h1,
   h2 {
     margin-bottom: clamp(48px, calc(64vw / 7.68), 64px);
   }
