--- a/next/src/components/global/Header/Header.module.scss
+++ b/next/src/components/global/Header/Header.module.scss
@@ -24,6 +24,7 @@
   top: 0;
   z-index: 35;
   width: 100%;
+  pointer-events: none;
 
   &::before {
     content: '';
@@ -51,6 +52,7 @@
   a {
     display: block;
     width: max-content;
+    pointer-events: auto;
   }
 
   svg {
