--- a/next/src/components/global/AdvantagesCta/AdvantagesCta.module.scss
+++ b/next/src/components/global/AdvantagesCta/AdvantagesCta.module.scss
@@ -1,16 +1,27 @@
 .section {
-  display: grid;
-  grid-template-columns: repeat(2, max-content);
   padding: clamp(48px, calc(64vw / 7.68), 80px) 0;
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 48px;
-  row-gap: 64px;
+  position: relative;
+
+  > div:first-child {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 48px;
+    row-gap: 64px;
+  }
+
+  > svg {
+    position: absolute;
+    top: -970px;
+    right: -600px;
+    z-index: -50;
+  }
 
   img {
     width: clamp(371px, calc(371vw / 10), 483px);
   }
-  & > div > p:first-of-type {
+  > div > div > p:first-of-type {
     margin-bottom: clamp(48px, calc(64vw / 7.68), 80px);
     max-width: 587px;
   }
