--- a/next/src/components/global/CourseDetails/DetailsAccordion/DetailsAccordion.module.scss
+++ b/next/src/components/global/CourseDetails/DetailsAccordion/DetailsAccordion.module.scss
@@ -5,7 +5,6 @@
   position: relative;
 
   details {
-    padding-bottom: 16px;
     border: 1px solid transparent;
     border-bottom-color: var(--primary-600);
     transition: border-color 0.2s;
@@ -16,10 +15,10 @@
 
     &[data-opened='true'] {
       & header > div {
-        & > svg:first-child {
+        > svg:first-child {
           transform: translateY(0);
         }
-        & > svg:last-child {
+        > svg:last-child {
           transform: rotate(180deg) translateY(0);
         }
       }
@@ -36,7 +35,7 @@
   display: flex;
   justify-content: space-between;
   gap: 8px;
-  margin-bottom: 8px;
+  padding-bottom: 16px;
 
   @media (max-width: 539px) {
     flex-direction: column;
@@ -46,10 +45,10 @@
     overflow: hidden;
     width: 25px;
     height: 24px;
-    & > svg:first-child {
+    > svg:first-child {
       transform: translateY(-100%);
     }
-    & > svg:last-child {
+    > svg:last-child {
       transform: rotate(180deg) translateY(100%);
     }
   }
@@ -77,7 +76,7 @@
 
 .content {
   overflow: hidden;
-  & > p {
+  > p {
     margin-bottom: 28px;
     padding: 0 48px 0 36px;
 
@@ -86,33 +85,15 @@
     }
   }
 
-  & > div {
+  > div {
     margin-bottom: 4px;
   }
-}
 
-.form {
-  position: relative;
-  width: calc(100% - 2px);
-  padding: clamp(16px, calc(28vw / 7.68), 28px) clamp(8px, calc(16vw / 7.68), 16px);
-  background: radial-gradient(38.84% 100% at 50% 100%, rgba(112, 123, 135, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
-    var(--primary-900, #000);
-  margin: 0 auto 1px;
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    right: -1px;
-    bottom: -1px;
-    background-color: var(--primary-800, #101010);
-    background-image: radial-gradient(circle at bottom left, rgba(30, 114, 160, 0.8) 0%, rgba(30, 114, 160, 0) 20%),
-      radial-gradient(circle at top right, rgba(30, 114, 160, 0.8) 0%, rgba(30, 114, 160, 0) 20%);
-    z-index: -1;
+  > form {
+    margin-bottom: 21px;
   }
 
-  & > h4,
+  > h4,
   p,
   button,
   label:last-of-type {
@@ -124,11 +105,11 @@
     color: var(--primary-300, #a7b4bc);
   }
 
-  & > p {
+  > p {
     margin-bottom: 12px;
   }
 
-  & > label,
+  > label,
   label:last-of-type {
     margin-bottom: clamp(28px, calc(32vw / 7.68), 32px);
   }
