--- a/next/src/components/global/NotFound/NotFound.module.scss
+++ b/next/src/components/global/NotFound/NotFound.module.scss
@@ -3,6 +3,17 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  position: relative;
+
+  > svg:last-child {
+    position: absolute;
+    right: calc(-1 * clamp(80px, calc(520vw / 7.68), 720px));
+    top: calc(-1 * clamp(240px, calc(560vw / 7.68), 640px));
+    z-index: -50;
+    transform: scale(0.6);
+    width: clamp(670px, calc(1338vw / 7.68), 1784px);
+    height: auto;
+  }
 
   header {
     transform: translateY(100%);
