--- a/next/src/components/global/Header/Header.module.scss
+++ b/next/src/components/global/Header/Header.module.scss
@@ -35,13 +35,14 @@
     right: 0;
     bottom: -64px;
     z-index: -1;
-    mask-image: linear-gradient(#000, #000, rgba(256, 256, 256, 0));
-    backdrop-filter: blur(0px);
-    transition: backdrop-filter 0.4s;
+    mask-image: linear-gradient(#000, #000, rgba(255, 255, 255, 0));
+    backdrop-filter: blur(13px);
+    transition: opacity 0.4s var(--easing);
+    opacity: 0;
   }
   &[data-active='true'] {
     &::before {
-      backdrop-filter: blur(13px);
+      opacity: 1;
     }
   }
 
@@ -57,6 +58,5 @@
 
   svg {
     width: clamp(69px, calc(80vw / 7.68), 80px);
-    height: clamp(69px, calc(81vw / 7.68), 81px);
   }
 }
