--- a/next/src/components/global/Reviews/Reviews.module.scss
+++ b/next/src/components/global/Reviews/Reviews.module.scss
@@ -20,6 +20,7 @@
   gap: clamp(20px, calc(24vw / 7.68), 32px);
   margin-bottom: clamp(48px, calc(64vw / 7.68), 80px);
   scroll-margin-top: 160px;
+  scroll-behavior: auto;
 
   @media (max-width: 1259px) {
     grid-template-columns: repeat(2, 1fr);
@@ -59,7 +60,7 @@
   font-size: clamp(calc(14rem / 16), calc(16vw / 7.68), calc(16rem / 16));
   padding: 8px 12px;
   border: var(--sectionBorder);
-  background: radial-gradient(38.84% 100% at 50% 100%, rgba(112, 123, 135, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+  background: radial-gradient(39% 100% at 50% 100%, rgba(112, 123, 135, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
     var(--primary-900, #000);
   max-width: 133px;
   display: flex;
@@ -77,7 +78,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: radial-gradient(38.84% 100% at 50% 100%, rgba(26, 159, 255, 0.4) 0%, rgba(0, 0, 0, 0.2) 100%),
+    background: radial-gradient(39% 100% at 50% 100%, rgba(26, 159, 255, 0.4) 0%, rgba(0, 0, 0, 0.2) 100%),
       var(--primary-900, #000);
     opacity: 0;
     z-index: 2;
